# valthera

./: .gitignore  .tmp_event.json  404.html  AGENT.md  DEVELOPER.md  Makefile  README.md  SETUP.md  build-lambdas.sh  docker-compose.yml  env-local.template.json  index.html  pyproject.toml  pytest.ini  requirements.txt  samconfig.template.toml  sitemap.xml  template.yaml  test-cognito-setup.sh  valthera-local  websocket_test.html  workflows.py
.devcontainer/: Dockerfile  devcontainer.json
.github/scripts/: ai_review.py
.github/workflows/: ai-code-review.yml  deploy-web.yml  docs.yml  test.yml
advanced/debugging/: index.html
advanced/extending-valthera/: index.html
advanced/optimizing-workflows/: index.html
agents/document-editor/: README.md  large_document.txt  pyproject.toml  updated_document.txt
agents/document-editor/document_editor/: chunker.py  cli.py  editor.py  logger_config.py  main.py  utils.py
app/: .dockerignore  .gitignore  Dockerfile  README.md  env.example  env.local.example  env.production.template  index.html  package.json  pnpm-lock.yaml  postcss.config.cjs  setup-environment.sh  tailwind.config.js  vite.config.ts
app/scripts/: switch-environment.sh
app/src/: App.css  App.tsx  index.css  main.tsx  vite-env.d.ts
assets/css/: styles.2d66db2d.css
assets/js/: 05120b7e.ee8b606a.js  16aced6c.3b0d957f.js  17896441.de330e2b.js  22dd74f7.261b71cc.js  5718fdfd.20cee4d2.js  59362658.e77e63a2.js  5971be0d.d9090602.js  5d5cb167.e1c3d4ff.js  6f3a5f12.2f3a6cb9.js  73664a40.f4c98c04.js  7661071f.77392834.js  8169b9da.9db36855.js  8717b14a.7c1c4107.js  925b3f96.76a4088d.js  main.0e1e1c11.js  (+10 more)
blog/: atom.xml  index.html  rss.xml
config/: elasticmq.conf
containers/video-processor/: .env.example  Dockerfile  Dockerfile.ec2  README.md  pyproject.toml  requirements.txt
containers/video-processor/scripts/: build-container.sh  build-env.sh  env.sh  setup.sh
containers/video-processor/video_processor/: worker.py  worker_simple.py
devices/camera/: .dockerignore  Dockerfile  Makefile  README.md  build.sh  build_multiarch.sh  docker-compose.yml  jetson.camera.override.yml  publish.sh  pyproject.toml  test_local.py
devices/camera/camera/: hello_world.py  http_server.py  realsense_camera.py  server.py  test_realsense_simple.py
devices/camera/scripts/: deploy.sh  setup-mdns.sh  test.sh
devices/jarvis/: Dockerfile  README.md  docker-compose.yml  jetson.jarvis.override.yml  pyproject.toml
devices/jarvis/docs/: API.md
devices/jarvis/jarvis/: __init__.py  audio_processor.py  center_depth_processor.py  cv_pipeline.py  depth_camera.py  processor_manager.py  server.py  video_processor.py
devices/jarvis/jarvis/api/: __init__.py
devices/jarvis/jarvis/api/v1/: __init__.py  analyze.py  classifiers.py  frames.py  pipeline.py  stream.py
devices/jarvis/jarvis/classifier/: __init__.py
devices/jarvis/jarvis/classifiers/: __init__.py  face_classifier.py  object_classifier.py  person_classifier.py  registry.py
devices/jarvis/jarvis/core/: __init__.py  cache.py  smart_pipeline.py
devices/jarvis/jarvis/models/: __init__.py  base.py
devices/jarvis/scripts/: deploy.sh  dev.sh  setup-mdns.sh
devices/jarvis/web/: Dockerfile  README.md  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
devices/jarvis/web/src/: App.css  App.tsx
devices/jarvis/web/src/components/: DetectionView.tsx  StatusPanel.tsx  VideoFeed.tsx
devices/jarvis/web/src/pages/: Classifiers.tsx  Dashboard.tsx  Debug.tsx  Settings.tsx
devices/jarvis/web/src/services/: api.ts  websocket.ts
devices/jarvis/web/src/types/: api.ts
docs/: advanced-features.md  api-reference.md  docusaurus.config.ts  examples.md  getting-started.md  package-lock.json
events/: datasource-upload-event.json  datasources-get-event.json
examples/: sample_usage.py  sample_workflows.py
frameworks/: index.html
lambdas/functions/projects/delete/: app.py  pyproject.toml
lambdas/layers/ffmpeg/: README.md  pyproject.toml
lambdas/layers/valthera-core/: README.md  pyproject.toml
langchain-valthera/: Makefile  README.md  pyproject.toml
markdown-page/: index.html
scripts/: build-lambdas.sh  clean.sh  setup-local-cognito.sh
synthetic-valthera/: pyproject.toml
synthetic-valthera/synthetic_valthera/hubspot/: generate_data.py
usage/: index.html
valthera/: .flake8  README.md  __init__.py  cli.py  pyproject.toml  sample_usage.py  workflow.json
valthera-examples/: example_custom_data_connector.py  example_langchain_tool.py  example_langchain_tool_v2.py  example_react_agent.py  example_simple.py  requirements.txt
valthera-langchain/: pyproject.toml  test.py
valthera-langchain/tests/: test_graph.py  test_integration.py  test_nodes.py
valthera-langchain/valthera_langchain/: graph.py
valthera-langchain/valthera_langchain/examples/: example_providers.py
valthera-langchain/valthera_langchain/graph/: graph.py
valthera-langchain/valthera_langchain/nodes/: __init__.py  base.py  processing.py
valthera-tools/: pyproject.toml
valthera/graph/: base.py
valthera/managers/: workflow.py
valthera/tests/: test_data_aggregator.py  test_reasoning_engine.py  test_trigger_generator.py  test_valthera_agent.py  test_valthera_scorer.py
valthera/tests/core/: test_graph.py
valthera/utils/: config.py
valthera/valthera/: agent.py  aggregator.py  models.py  reasoning_engine.py  scorer.py
valthera/valthera/agents/behavioral/fogg_model/: README.md  agent.py  scorer.py
valthera/valthera/agents/behavioral/fogg_model/trigger_decision_agent/: agent.py
valthera/valthera/agents/behavioral/trigger/: agent.py
valthera/valthera/agents/trigger/: agent.py  trigger_generator.py
valthera/valthera/connectors/: base.py  generic_api_connector.py  generic_sql_connector.py
valthera/valthera/connectors/builtin/: hubspot.py  posthog.py  snowflake.py
valthera/valthera/core/: agent.py  graph.py  graph_old.py
valthera/valthera/models/: base.py
valthera/valthera/models/providers/: ollama.py  openai.py
vjepa2/: custom_behavior_trainer.py
web/: index.html  package.json  pnpm-lock.yaml  vite.config.js
(+221 files in other folders)
