[tool.poetry]
name = "valthera"
version = "0.1.0"
description = "A framework for building agent services"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "valthera"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"

[tool.poetry.scripts]
valthera = "valthera.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
