[tool.poetry]
name = "valthera-langchain"
version = "0.1.0"
description = ""
authors = ["Vijay Selvaraj <vijay.selvaraj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
networkx = "^3.4.2"
pydantic = "^2.10.6"
valthera = {path = "../valthera"}
langgraph = "^0.2.74"

[tool.poetry.group.test.dependencies]
pytest = "^7.0"
pytest-asyncio = "^0.20.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
