[tool.poetry]
name = "valthera"
version = "0.1.0"
description = ""
authors = ["Vijay Selvaraj <vijay.selvaraj@gmail.com>"]
readme = "README.md"
packages = [
    { include = "valthera", from = "." }  # Added 'from' to ensure correct path resolution
]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.115.8"}
pydantic = "^2.6.1"
networkx = "^3.4.2"
rich = "^13.9.4"
openai = "^1.12.0"
aiohttp = "^3.9.3"
anthropic = "^0.18.1"  # Optional: for Claude support
click = "^8.1.3"
readchar = "^4.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"