[tool.poetry]
name = "valthera-jarvis"
version = "0.1.0"
description = "Jarvis multi-modal agent with wake word detection and person counting"
authors = ["Valthera"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
numpy = "^1.26.4"
opencv-python = "^4.8.0"
pyaudio = "^0.2.13"
openwakeword = "^0.6.0"
vosk = "^0.3.45"
ultralytics = "^8.0.0"
torch = "^2.0.0"
pillow = "^10.0.0"
scipy = "^1.11.0"
pyrealsense2 = "^2.54.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
