[tool.poetry]
name = "valthera-jarvis"
version = "0.1.0"
description = "Jarvis camera-based agent with person detection and depth streaming"
authors = ["Valthera"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
websockets = "^12.0"
numpy = "^1.26.4"
opencv-python = "^4.8.0"
ultralytics = "^8.0.0"
torch = "^2.0.0"
pillow = "^10.0.0"
pyrealsense2 = "^2.54.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
