[tool.poetry]
name = "ffmpeg-layer"
version = "0.1.0"
description = "FFmpeg layer for video processing Lambda functions"
authors = ["Valthera Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.8.0"
numpy = "^1.24.0"
Pillow = "^10.0.0"
boto3 = "^1.28.0"
botocore = "^1.31.0"
requests = "^2.31.0"
python-dateutil = "^2.8.0"
urllib3 = "^1.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 