[tool.poetry]
name = "valthera-core-layer"
version = "0.1.0"
description = "Core business logic and utilities layer for Valthera Lambda functions"
authors = ["Valthera Team"]
readme = "README.md"
packages = [{include = "valthera_core", from = "python"}]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.28.0"
botocore = "^1.31.0"
requests = "^2.31.0"
python-dateutil = "^2.8.0"
pydantic = "^2.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
urllib3 = "^1.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88 